[tool.poetry]
name = "pyetf"
version = "1.0.0"
description = ""
authors = ["Jakub Pluta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
bs4 = "^0.0.1"
pathlib = "^1.0.1"
random-user-agent = "^1.0.1"
pylint = "^2.17.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
pre-commit = "^3.4.0"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]

ignore = ["E501"]
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"setup.py" = ["E402", "F401"]