[tool.poetry]
name = "etfpy"
license = "MIT"
version = "1.0.0"
authors = ["Jakub Pluta"]
description = "ETF screening tool"
readme = "README.md"
homepage = "https://github.com/JakubPluta/pyetf/"
repository = "https://github.com/JakubPluta/pyetf/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pyetf" },
    { include = "pyetf/**/*.py" },
    { include = "pyetf/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
bs4 = "^0.0.1"
pathlib = "^1.0.1"
random-user-agent = "^1.0.1"
pylint = "^2.17.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
pre-commit = "^3.4.0"
pylint = "^2.17.7"
pytest-cov = "^4.1.0"
isort = "^5.12.0"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = ["E501"]
unfixable = ["B"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true
combine_as_imports = true