[tool.poetry]
name = "etfpy"
license = "MIT"
version = "1.0.12"
authors = ["Jakub Pluta"]
description = "ETF screening tool"
readme = "README.md"
homepage = "https://github.com/JakubPluta/pyetf/"
repository = "https://github.com/JakubPluta/pyetf/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "etfpy" },
    { include = "etfpy/**/*.py" },
    { include = "etfpy/*.py" },
    { include = "etfpy/data/etfs/etfs_list.json"},
]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
random-user-agent = "^1.0.1"
beautifulsoup4 = "^4.12.2"
numpy = "^1.26.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
isort = "^5.12.0"
pylint = "^2.17.7"
bumpversion = "^0.6.0"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = ["E501"]
unfixable = ["B"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true
combine_as_imports = true

[tool.coverage.run]
omit = [
    "etfpy/scripts/*",
    "etfpy/log.py",
    "etfpy/exc.py"
]

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true
